manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ctfd-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: ctfd.app.r2b001.site
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 80
        path: /
        pathType: Prefix
